--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
     ],
     "rules": {
         "quotes": ["error", "single"],
-        "jsx-quotes": ["error", "single"],
+        "jsx-quotes": ["error", "prefer-single"],
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off",
         "react/jsx-filename-extension": "off"
